[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Question1.gd" type="Script" id=4]
[ext_resource path="res://Spot.gd" type="Script" id=5]
[ext_resource path="res://Question2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Q1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Q1.gd" type="Script" id=8]
[ext_resource path="res://Stopwatch.tscn" type="PackedScene" id=9]
[ext_resource path="res://Q2.gd" type="Script" id=10]
[ext_resource path="res://Q2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Padauk-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://buttonFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://labelFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/saber.png" type="Texture" id=15]
[ext_resource path="res://Q4A.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]
size = 11
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 11
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 11
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 11
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 11
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 11
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
extra_spacing_space = -3
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.57783, 6.64839 )

[node name="Question1" type="Node2D"]
script = ExtResource( 4 )
next_scene_path = "res://Question2.tscn"
next_scene = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 48 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 80, 32 )

[node name="StaticBody2D2" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 112, 32 )

[node name="StaticBody2D3" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 144, 32 )

[node name="StaticBody2D4" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 48 )

[node name="StaticBody2D10" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 112 )

[node name="StaticBody2D8" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 80 )

[node name="StaticBody2D7" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 64 )

[node name="StaticBody2D9" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 96 )

[node name="StaticBody2D5" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 176, 64 )

[node name="StaticBody2D34" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 160, 64 )

[node name="StaticBody2D35" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 160, 80 )

[node name="StaticBody2D36" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 80 )

[node name="StaticBody2D47" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 96 )

[node name="StaticBody2D37" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 48 )

[node name="StaticBody2D38" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 112, 80 )

[node name="StaticBody2D39" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 96, 64 )

[node name="StaticBody2D41" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 80, 64 )

[node name="StaticBody2D42" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 64, 96 )

[node name="StaticBody2D43" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 96, 112 )

[node name="StaticBody2D44" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 112 )

[node name="StaticBody2D45" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 160, 112 )

[node name="StaticBody2D46" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 192, 96 )

[node name="StaticBody2D40" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 96, 80 )

[node name="StaticBody2D11" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 128 )

[node name="StaticBody2D12" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 64, 128 )

[node name="StaticBody2D13" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 80, 128 )

[node name="StaticBody2D14" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 96, 128 )

[node name="StaticBody2D15" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 32 )

[node name="StaticBody2D23" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 48 )

[node name="StaticBody2D24" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 64 )

[node name="StaticBody2D25" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 80 )

[node name="StaticBody2D26" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 96 )

[node name="StaticBody2D27" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 112 )

[node name="StaticBody2D28" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 208, 128 )

[node name="StaticBody2D29" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 192, 128 )

[node name="StaticBody2D30" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 176, 128 )

[node name="StaticBody2D31" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 144, 128 )

[node name="StaticBody2D33" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 128 )

[node name="StaticBody2D32" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 160, 128 )

[node name="StaticBody2D16" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 192, 32 )

[node name="StaticBody2D17" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 176, 32 )

[node name="StaticBody2D18" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 160, 32 )

[node name="StaticBody2D19" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 128, 32 )

[node name="StaticBody2D20" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 96, 32 )

[node name="StaticBody2D21" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 64, 32 )

[node name="StaticBody2D22" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 48, 32 )

[node name="StaticBody2D6" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 192, 64 )

[node name="Spot" parent="." instance=ExtResource( 3 )]
position = Vector2( 112, 128 )
script = ExtResource( 5 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 64.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 90.0
window_title = ":)"
dialog_text = "Level Cleared"

[node name="Label1" type="Button" parent="."]
visible = false
margin_left = 64.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExLabel1" type="Label" parent="Label1"]
pause_mode = 2
margin_left = 16.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 14 )
text = "Which one of the following is a deficiency disease?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong1A" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 64.0
margin_right = 312.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 13 )
text = "Diabetes"

[node name="Correct1" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 13 )
text = "Goitre"

[node name="Wrong1B" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 128.0
margin_right = 311.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 13 )
text = "Tetanus"

[node name="PopupMenu1" type="PopupMenu" parent="."]
pause_mode = 2
margin_left = 24.0
margin_right = 208.0
margin_bottom = 96.0

[node name="Q1" parent="." instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="Label0" type="Button" parent="."]
visible = false
margin_left = 48.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExLabel0" type="Label" parent="Label0"]
margin_top = 8.0
margin_right = 224.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 14 )
text = "An organic substance bound to an enzyme and essential for its activity is called"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong0A" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 64.0
margin_right = 312.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Apoenzyme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong0B" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Isoenzyme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct0" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 224.0
margin_top = 128.0
margin_right = 312.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
text = "Coenzyme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stopwatch" parent="." instance=ExtResource( 9 )]

[node name="Q2" parent="." instance=ExtResource( 11 )]
script = ExtResource( 10 )

[node name="Label2" type="Button" parent="."]
visible = false
margin_left = 24.0
margin_top = 8.0
margin_right = 296.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExLabel2" type="Label" parent="Label2"]
margin_left = 8.0
margin_right = 264.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 14 )
text = "Which is the one characteristic of the parents that can be inherited by their children?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct2" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 216.0
margin_top = 56.0
margin_right = 314.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 4 )
text = "Snub nose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong2A" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 216.0
margin_top = 88.0
margin_right = 312.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 5 )
text = "Cut nose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong2B" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 216.0
margin_top = 120.0
margin_right = 312.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 6 )
text = "Deep scar on chin"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 48.0
margin_top = 152.0
margin_right = 220.0
margin_bottom = 166.0
text = "Oops! You got that wrong..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="print" type="Label" parent="."]
visible = false
margin_left = 256.0
margin_top = 8.0
margin_right = 296.0
margin_bottom = 22.0
text = "bad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q4" type="Area2D" parent="."]
position = Vector2( 72, 56 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Q4"]
scale = Vector2( 0.039, 0.044 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Q4"]
shape = SubResource( 7 )

[node name="Dummy1" type="Sprite" parent="."]
position = Vector2( 168, 104 )
scale = Vector2( 0.039, 0.044 )
texture = ExtResource( 15 )

[node name="Label4" type="Button" parent="."]
visible = false
margin_left = 32.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExLabel4" type="Label" parent="Label4"]
margin_left = 16.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 14 )
text = "The scientific name of banyan is written as Ficus benghalensis L. Which of the following statements is correct regarding this?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct4" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 32.0
margin_top = 80.0
margin_right = 288.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 13 )
text = "Letter L. signifies the taxonomist Linnaeus."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong4A" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 32.0
margin_top = 112.0
margin_right = 288.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 13 )
text = "Letter L. signified Latin language."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong4B" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 32.0
margin_top = 144.0
margin_right = 288.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 13 )
text = "Benghalensis is a generic name."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Spot" to="Spot" method="_on_Spot_body_entered"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="pressed" from="Wrong1A" to="." method="_on_Wrong1A_pressed"]
[connection signal="pressed" from="Correct1" to="." method="_on_Correct1_pressed"]
[connection signal="pressed" from="Wrong1B" to="." method="_on_Wrong1B_pressed"]
[connection signal="body_entered" from="Q1" to="Q1" method="_on_Q1_body_entered"]
[connection signal="pressed" from="Wrong0A" to="." method="_on_Wrong0A_pressed"]
[connection signal="pressed" from="Wrong0A" to="Player" method="_on_Wrong0A_pressed"]
[connection signal="pressed" from="Wrong0B" to="." method="_on_Wrong0B_pressed"]
[connection signal="pressed" from="Correct0" to="." method="_on_Correct0_pressed"]
[connection signal="body_entered" from="Q2" to="Q2" method="_on_Q2_body_entered"]
[connection signal="pressed" from="Correct2" to="." method="_on_Correct2_pressed"]
[connection signal="pressed" from="Wrong2A" to="." method="_on_Wrong2A_pressed"]
[connection signal="pressed" from="Wrong2B" to="." method="_on_Wrong2B_pressed"]
[connection signal="body_entered" from="Q4" to="Q4" method="_on_Q4_body_entered"]
[connection signal="pressed" from="Correct4" to="." method="_on_Correct4_pressed"]
[connection signal="pressed" from="Wrong4A" to="." method="_on_Wrong4A_pressed"]
[connection signal="pressed" from="Wrong4B" to="." method="_on_Wrong4B_pressed"]
